--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2024"
 
 [dependencies]
 actix-web = "4.10.2"
+derive_more = "2.0.1"
 dotenvy = "0.15.7"
+jsonwebtoken = "9.3.1"
 mongodb = "3.2.3"
 serde = { version = "1.0.219", features = ["derive"] }
+tokio = { version = "1.45.0", features = ["time"] }
