--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 actix-web = "4.10.2"
 derive_more = "2.0.1"
 dotenvy = "0.15.7"
+env_logger = "0.11.8"
 jsonwebtoken = "9.3.1"
 mongodb = "3.2.3"
 serde = { version = "1.0.219", features = ["derive"] }
